[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/secundary_menus/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://menus/secundary_menus/SettingsMenu.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.431373 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_color = Color( 0.25098, 0.619608, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.211765, 0.211765, 0.392157 )

[node name="PauseMenuPanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -43.0
margin_right = 6.0
margin_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="PauseMenuContainer" type="VBoxContainer" parent="PauseMenuPanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 333.0
margin_bottom = 254.0
custom_constants/separation = 10
alignment = 1

[node name="PauseMenuLabelText" type="Label" parent="PauseMenuPanelContainer/PauseMenuContainer"]
margin_right = 330.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "GAME_PAUSED"
align = 1
valign = 1

[node name="Separation" type="Control" parent="PauseMenuPanelContainer/PauseMenuContainer"]
margin_top = 52.0
margin_right = 330.0
margin_bottom = 62.0
rect_min_size = Vector2( 330, 10 )

[node name="ResumeGameButton" type="Button" parent="PauseMenuPanelContainer/PauseMenuContainer"]
margin_top = 72.0
margin_right = 330.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "RESUME_GAME"

[node name="ExitGameButton" type="Button" parent="PauseMenuPanelContainer/PauseMenuContainer"]
margin_top = 130.0
margin_right = 330.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 2 )
text = "EXIT_GAME"

[node name="Separation2" type="Control" parent="PauseMenuPanelContainer/PauseMenuContainer"]
margin_top = 188.0
margin_right = 330.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 5 )

[node name="OptionsButton" type="Button" parent="PauseMenuPanelContainer/PauseMenuContainer"]
margin_top = 203.0
margin_right = 330.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
layer = 3
visible = false

[connection signal="pressed" from="PauseMenuPanelContainer/PauseMenuContainer/ResumeGameButton" to="." method="_on_ResumeGameButton_pressed"]
[connection signal="pressed" from="PauseMenuPanelContainer/PauseMenuContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
[connection signal="pressed" from="PauseMenuPanelContainer/PauseMenuContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
